--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
-    <title>Cubo di rubik</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simulatore Cubo di Rubik 3x3x3</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="Container">
+<div class="container">
+    <h1>Simulatore Cubo di Rubik 3x3x3</h1>
+
+    <div class="visualizzazioni">
+        <!-- VISUALIZZAZIONE 3D -->
         <div id="cubo3D">
-        </div>
-        <div id="pulsanti">
-            <button id="mischia">Mischia</button>
-            <button id="risolvi">Risolvi</button>
+            <!-- Three.js renderizzerà qui -->
         </div>
     </div>
-    <script src="script.js"></script>
+
+    <!-- PANNELLO CONTROLLI -->
+    <div class="controlli">
+        <button id="btn-mischia">🔀 Mischia</button>
+        <button id="btn-risolvi">🎯 Risolvi</button>
+        <button id="btn-reset">🔄 Reset</button>
+    </div>
+
+    <div id="stato-messaggio">Pronto per iniziare!</div>
+</div>
+
+<!-- Importa Three.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
