--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
 
 <!-- Importa Three.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-<script src="script.js"></script>
+<!--file che contiene la formazione del cubo e le sue funzioni-->
+<script src="cubo.js"></script>
+<script type="module" src="script.js"></script>
 </body>
 </html>
